<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5EFDD"
    android:padding="32dp">

    <TextView
        android:id="@+id/titulo_app"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="96dp"
        android:gravity="center"
        android:text="@string/imc_calculadora"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/menino"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/titulo_app"
        android:layout_marginStart="32dp"
        android:src="@drawable/menino_img" />

    <ImageView
        android:id="@+id/menina"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/titulo_app"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="32dp"
        android:src="@drawable/menina_img2" />

    <TextView
        android:id="@+id/weight_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menino"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/peso_kg"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/height_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menina"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/altura_cm"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/peso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/weight_heading"
        android:layout_marginStart="48dp"
        android:background="@android:color/transparent"
        android:hint="@string/_00"
        android:inputType="numberDecimal"
        android:maxLength="4"
        android:textSize="48sp" />

    <EditText
        android:id="@+id/altura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/height_heading"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="36dp"
        android:background="@android:color/transparent"
        android:hint="@string/_00"
        android:inputType="number"
        android:maxLength="4"
        android:textSize="48sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botao_calculo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/peso"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:padding="12dp"
        android:text="@string/calcule_seu_imc"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_700"
        app:cornerRadius="8dp" />

    <LinearLayout
        android:id="@+id/imcView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/peso"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/seu_imc" />

        <TextView
            android:id="@+id/imc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:text="20.2" />

        <TextView
            android:id="@+id/imc_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:text="Overweight" />

        <TextView
            android:id="@+id/calcule_novamente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/calculo_imc_novamente"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>